# alpinocorpus-python

./: .gitignore  CMakeLists.txt  README.markdown  alpinocorpus.pxd  alpinocorpus.pyx  setup.py
debian/: changelog  control  copyright  examples
examples/: bracket.py  corpora.README  corpora.ini  corpora.ini.example  names.py  names.xq  server.py  server_client.py  server_config.py  vorfeld.py
examples3/: bracket.py  vorfeld.py
src/: CorpusReader.cpp  CorpusReader.hh  CorpusWriter.cpp  CorpusWriter.hh  Entry.cpp  Entry.hh  EntryIterator.cpp  EntryIterator.hh  Macros.cpp  Macros.hh  MarkerQuery.cpp  MarkerQuery.hh  alpinocorpus.cpp  alpinocorpus.h  boost_wrap.cpp  boost_wrap.hh
